[tool.poetry]
name = "check"
version = "0.3.5"
description = ""
authors = ["Your Name <you@example.com>"]
license = "gpl"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.27.0"
torch = "^2.0.0"
urllib3 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
